# EscapeAnalysisTool

./: .gitignore  CMakeLists.txt  README.md  output.csv  results.csv
graphing/: README.md  generate_graph.py
graphing/example/data/: test_data_1.csv  test_data_2.csv
samples/: sample.cpp  sample.ll  sample2.cpp  sample2.ll
src/: ArgumentParser.cpp  ArgumentParser.h  CSVWriter.cpp  CSVWriter.h  EscapeAnalyser.cpp  EscapeAnalyser.h  FunctionSummary.cpp  FunctionSummary.h  main.cpp
